test/scc/pp/errors/019.a
019.t:1:13: error: macro parameters must be comma-separated